Lot CRUD Done